--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 code/analysis/analysis_1/.ipynb_checkpoints/base1_ci-checkpoint.ipynb
 code/analysis/analysis_2/.ipynb_checkpoints/base0_ci-checkpoint.ipynb
 code/analysis/analysis_2/.ipynb_checkpoints/base1_ci-checkpoint.ipynb
+code/analysis/analysis_2/.ipynb_checkpoints/base1_ca-checkpoint.ipynb
+code/analysis/analysis_1/base1_ci.ipynb
+code/analysis/analysis_1/.ipynb_checkpoints/base1_ca-checkpoint.ipynb
+code/analysis/analysis_2/.ipynb_checkpoints/base0_ci-checkpoint.ipynb
+code/analysis/analysis_1/.ipynb_checkpoints/base0_ca-checkpoint.ipynb
+code/analysis/analysis_2/.ipynb_checkpoints/base0_ci-checkpoint.ipynb
+code/analysis/analysis_2/.ipynb_checkpoints/base0_ci-checkpoint.ipynb
